<resources>
    <string name="app_name">EdgeMobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_personal">Профиль</string>
    <string name="nav_tests">Тесты</string>
    <string name="nav_stats">Статистика</string>
    <string name="rus_language">Русский язык</string>
    <string name="literature">Литература</string>
    <string name="informatics">Информатика</string>
    <string name="physics">Физика</string>
    <string name="chemistry">Химия</string>
    <string name="geography">География</string>
    <string name="biology">Биология</string>
    <string name="eng_language">Английский язык</string>
    <string name="start_testing">Начать тестирование</string>
    <string name="choose_theme">Выберите предмет :</string>
    <string name="link_to_main"><![CDATA[<  Главная]]></string>
    <string name="link_to_progress"><![CDATA[Прогресс  >]]></string>
    <string name="user_event">Что вы хотите сделать ?</string>
    <string name="select_test">Пройти тест</string>
    <string name="select_task">Тренироваться по темам</string>
    <string name="begin_test">пройти тесты</string>
</resources>
