<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kos.edgemobile.activities.fragments.StartTestFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"/>
        <TextView
            android:id="@+id/TextHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/choose_theme"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/rus_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/rus_language"/>
        <Button
            android:id="@+id/literature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/literature"/>
        <Button
            android:id="@+id/informatics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/informatics"/>
        <Button
            android:id="@+id/physics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/physics"/>
        <Button
            android:id="@+id/chemistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/chemistry"/>
        <Button
            android:id="@+id/geography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/geography"/>
        <Button
            android:id="@+id/biology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/biology"/>
        <Button
            android:id="@+id/eng_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:text="@string/eng_language"/>
    </LinearLayout>

</FrameLayout>
