<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_personal"
        android:title="@string/nav_personal"
        android:icon="@mipmap/img_profile"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/nav_tests"
        android:icon="@mipmap/img_tests"
        android:title="@string/nav_tests"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_stats"
        android:title="@string/nav_stats"
        android:icon="@mipmap/img_stats"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_news"
        android:title="Title"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>