<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ThemeSelect"
        android:id="@+id/ThemeOk"
        android:text="@string/user_event"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:layout_marginBottom="10sp"/>
    <Button
    android:id="@+id/ThemeSelect"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:textStyle="italic"
    android:text="@string/select_task"
        android:onClick="Setect_Type"
    />
    <Button
    android:id="@+id/SelectTest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/ThemeSelect"
    android:textStyle="italic"
    android:text="@string/select_test"
        android:onClick="Setect_Type"/>

</RelativeLayout>
